fixed img overflow issue

--- a/main.css
+++ b/main.css
@@ -168,8 +168,7 @@ body {
 }
 
 .project-image {
-  height: 300px;
-  max-width: 450px;
+  max-width: 100%;
   border-radius: 8px;
 }
 
